2002-03-16  Mark Glines <mark@glines.org>

	* use struct fuse_statfs everywhere possible to avoid problems
      with the headerfiles changing struct statfs member sizes

2002-03-01  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Another RPM spec file for RedHat >= 7 by Ian Pilcher

2002-01-14  Miklos Szeredi <mszeredi@inf.bme.hu>

	* RPM support by Achim Settelmeier

2002-01-09  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Version 0.95 released
	
2002-01-09  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Revaidate all path components not just the last, this means a
	very small performance penalty for being more up-to-date.

2002-01-08  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Update and fix python interface

2002-01-07  Mark Glines <mark@glines.org>
	
	* Added statfs() support to kernel, lib, examples, and perl!

2001-12-26  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Better cross compilation support

	* Ported to Compaq IPAQ

2001-12-20  Miklos Szeredi <mszeredi@inf.bme.hu>
	
	* Added function fuse_get_context() to library API (inspired by
	patch from Matt Ryan) 
	
	* Added flags to fusermount and to kernel interface to control
	permission checking

	* Integrated fuse_set_operations() into fuse_new()

2001-12-08  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Applied header protection + extern "C" patch by Roland
	Bauerschmidt

2001-12-02  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added perl bindings by Mark Glines 

2001-11-21  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Cleaned up way of mounting simple filesystems.

	* fuse_main() helper function added

2001-11-18  Miklos Szeredi <mszeredi@inf.bme.hu>
	
	* Optimized read/write operations, so that minimal copying of data
	is done

2001-11-14  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Python bindings by Jeff Epler added

2001-11-13  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fixed vfsmount reference leak in fuse_follow_link

	* FS blocksize is set to PAGE_CACHE_SIZE, blksize attribute from
	userspace is ignored
